--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Jacqueline Quackenbush - Web Developer</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <script src="script.js"></script>
+  <article>
+    <header class='banner'>
+      <h1>Jacqueline Quackenbush</h1>
+      <h3>Full-Stack Web Developer</h2>
+    </header>
+  </article>
+<br>
+  <article id = 'intro'>
+    <img src='profilepic.jpeg' alt='with ducks'>
+      <p>I am Jacqueline Quackenbush, a Full-Stack Web Developer based in Brooklyn, New York</p>
+  </article>
+  <br>
+ 
+  <article id = 'about me'> 
+    <h2 class='banner'>About Me</h2>
+    <p>I have always been fascinated by science, technology and the arts. In university, I studied French and Biology before becoming a tutor which allowed me to teach others about these things that I love. Becoming a developper was the fruition of years of falling down rabbit holes, teaching others, and always trying to learn something new. I love being able to use my new skills to help others learn new things!</p>
+  <p>When I'm not at my computer you can find me:
+    <ul>
+      <li>SCUBA Diving</li>
+      <li>Learning a new language</li>
+      <li>Playing Stardew Valley</li>
+    </ul>
+  </p>
+  </article>
+  <br>
