--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </article>
 <br>
   <article id = 'intro'>
-    <img src='profilepic.jpeg' alt='with ducks'>
+    <img src='Pofile Pic.jpeg' alt='with ducks'>
       <p>I am Jacqueline Quackenbush, a Full-Stack Web Developer based in Brooklyn, New York</p>
   </article>
   <br>
