--- a/index.html
+++ b/index.html
@@ -35,3 +35,11 @@
   </p>
   </article>
   <br>
+   <article id = 'contact'>
+    <h2 class='banner'>Contact</h2>
+    <p>Check out my projects on <a href='https://github.com/JacquelineQ' class='btn'>GitHub</a></p>
+    <p>Or let's connect on <a href='https://www.linkedin.com/in/jacqueline-quackenbush-b11913118/' class='btn'>LinkedIn</a></p>
+  </article>
+</body>
+
+</html>
