--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
 <br>
   <article id = 'intro'>
     <img src='Pofile Pic.jpeg' alt='with ducks'>
-      <p>I am Jacqueline Quackenbush, a Full-Stack Web Developer based in Brooklyn, New York</p>
+      <p>I am Jacqueline Quackenbush, a Full-Stack Web Developer based in Brooklyn, New York. </p>
+    <p>I pride myself in creating projects that are:
+      <ol>
+        <li>Visually Appealing</li>
+        <li>Built with Mobile First best practices</li>
+        <li>Accessible to all users</li>
+       </ol>
+    </p>
   </article>
   <br>
  
