--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,10 @@
  
   <article id = 'about me'> 
     <h2 class='banner'>About Me</h2>
-    <p>I have always been fascinated by science, technology and the arts. In university, I studied French and Biology before becoming a tutor which allowed me to teach others about these things that I love. Becoming a developper was the fruition of years of falling down rabbit holes, teaching others, and always trying to learn something new. I love being able to use my new skills to help others learn new things!</p>
+    <p>I have always been fascinated by science, technology and the arts. In university, I studied French and Biology before becoming a tutor which allowed me to teach
+      others about these things that I love. Becoming a developper was the fruition of years of falling down rabbit holes, teaching others, and always trying to learn 
+      something new. I love being able to use my new skills to help others learn new things!</p>
+    <hr>
   <p>When I'm not at my computer you can find me:
     <ul>
       <li>SCUBA Diving</li>
