--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
 <hr>
   <article id = 'intro'>
     <img src='Pofile Pic.jpeg' alt='with ducks'>
-      <p>I am Jacqueline Quackenbush, a Full-Stack Web Developer based in Brooklyn, New York. </p>
+      <h3>I am Jacqueline Quackenbush, a Full-Stack Web Developer based in Brooklyn, New York. </h3>
     <hr>
-    <p>I pride myself in creating projects that are:
+    <p>I pride myself in creating projects that are:</p>
       <ol>
         <li>Visually Appealing</li>
         <li>Built with Mobile First best practices</li>
         <li>Accessible to all users</li>
        </ol>
-    </p>
+    
   </article>
   <hr>
  
-  <article id = 'about me'> 
+  <article id = 'about_me'> 
     <h2 class='banner'>About Me</h2>
     <p>I have always been fascinated by science, technology and the arts. In university, I studied French and Biology before becoming a tutor which allowed me to teach
       others about these things that I love. Becoming a developper was the fruition of years of falling down rabbit holes, teaching others, and always trying to learn 
       something new. I love being able to use my new skills to help others learn new things!</p>
     <hr>
-  <p>When I'm not at my computer you can find me:
+    <p>When I'm not at my computer you can find me:</p>
     <ul>
       <li>SCUBA Diving</li>
       <li>Learning a new language</li>
       <li>Playing Stardew Valley</li>
     </ul>
-  </p>
+  
   </article>
   <hr>
    <article id = 'contact'>
