--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </article>
 <hr>
   <article id = 'intro'>
-    <img src='Pofile Pic.jpeg' alt='with ducks'>
+    <img src='IMG_1649.jpeg' alt='with ducks'>
       <h3>I am Jacqueline Quackenbush, a Full-Stack Web Developer based in Brooklyn, New York. </h3>
     <hr>
     <p>I pride myself in creating projects that are:</p>
